src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: #ffffff;
    --background-secondary: #effdfc;
    --background-tertiary: #e7f0f0;
    --background-green: #247370;
    --foreground: #020817;
    --card: #ffffff;
    --card-foreground: #020817;
    --popover: #ffffff;
    --popover-foreground: #020817;
    --primary: #0c6460;
    --primary-foreground: #f8fafc;
    --secondary: #9bc4c1;
    --secondary-foreground: #0f172a;
    --muted: #f1f5f9;
    --muted-foreground: #64748b;
    --accent: #ff6d01;
    --accent-foreground: #ffffff;
    --destructive: #ef4444;
    --destructive-foreground: #f8fafc;
    --border: #e2e8f0;
    --input: #e2e8f0;
    --ring: #020817;
    --radius: 0.5rem;
    --chart-1: #e76e50;
    --chart-2: #2a9d90;
    --chart-3: #274754;
    --chart-4: #e8c468;
    --chart-5: #f4a462;
    --text: #63666a;
    --heading: #0b0a13;
    --highlight: #cee0df;
    --highlight-dark: #1d8882;
    --header-height: 4rem;

    @media screen and (min-width: 768px) {
      --header-height: 5rem;
    }
  }

  .dark {
    --background: hsl(222.2 84% 4.9%);
    --foreground: hsl(210 40% 98%);
    --card: hsl(222.2 84% 4.9%);
    --card-foreground: hsl(210 40% 98%);
    --popover: hsl(222.2 84% 4.9%);
    --popover-foreground: hsl(210 40% 98%);
    --primary: hsl(210 40% 98%);
    --primary-foreground: hsl(222.2 47.4% 11.2%);
    --secondary: hsl(217.2 32.6% 17.5%);
    --secondary-foreground: hsl(210 40% 98%);
    --muted: hsl(217.2 32.6% 17.5%);
    --muted-foreground: hsl(215 20.2% 65.1%);
    --accent: hsl(217.2 32.6% 17.5%);
    --accent-foreground: hsl(210 40% 98%);
    --destructive: hsl(0 62.8% 30.6%);
    --destructive-foreground: hsl(210 40% 98%);
    --border: hsl(217.2 32.6% 17.5%);
    --input: hsl(217.2 32.6% 17.5%);
    --ring: hsl(212.7 26.8% 83.9%);
    --chart-1: hsl(220 70% 50%);
    --chart-2: hsl(160 60% 45%);
    --chart-3: hsl(30 80% 55%);
    --chart-4: hsl(280 65% 60%);
    --chart-5: hsl(340 75% 55%);
  }
}

@layer base {
  * {
    @apply border-border font-primary;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-secondary;
  }

  h1 {
    color: theme("colors.heading");
    font-size: 2.25rem;
    line-height: theme("lineHeight.tight");
    font-family: theme("fontFamily.secondary");

    @media screen and (min-width: 768px) {
      font-size: 2.6rem;
    }

    @media screen and (min-width: 1024px) {
      font-size: 3rem;
    }

    .marker-underline::after {
      bottom: 3px;
    }
  }

  h2 {
    color: theme("colors.heading");
    font-size: theme("fontSize.3xl");
    line-height: theme("lineHeight.tight");
    font-family: theme("fontFamily.secondary");

    @media screen and (min-width: 768px) {
      font-size: theme("fontSize.4xl");
    }
    /* 
    @media screen and (min-width: 1024px) {
      font-size: 3rem;
    } */
  }

  h3 {
    color: theme("colors.heading");
    font-size: theme("fontSize.lg");
    line-height: 1.75rem;
    letter-spacing: theme("letterSpacing.wide");

    @media screen and (min-width: 768px) {
      font-size: theme("fontSize.xl");
    }
  }

  body {
    @apply bg-background text-foreground;
  }

  .marker-underline {
    position: relative;
    display: inline-block;
    z-index: 10;
  }

  .marker-underline::after {
    content: "";
    position: absolute;
    left: 0%;
    bottom: 1px;
    width: 100%;
    height: 14px;
    background: #cee0df;
    z-index: -1;
  }

  .scroll-margin-m {
    scroll-margin-top: calc(2 * var(--header-height));
  }

  .scroll-margin-p {
    scroll-margin-top: var(--header-height);
  }

  p {
    @apply text-sm leading-relaxed text-text;
  }

  ul {
    @apply grid list-inside list-disc gap-1;
    li {
      @apply text-sm leading-relaxed text-heading;
    }
  }

  .module-m {
    margin-top: 4rem;
    margin-bottom: 4rem;

    @media screen and (min-width: 768px) {
      margin-top: 5rem;
      margin-bottom: 5rem;
    }

    @media screen and (min-width: 1024px) {
      margin-top: 6rem;
      margin-bottom: 6rem;
    }
  }

  .module-p {
    padding-top: 4rem;
    padding-bottom: 4rem;

    @media screen and (min-width: 768px) {
      padding-top: 5rem;
      padding-bottom: 5rem;
    }

    @media screen and (min-width: 1024px) {
      padding-top: 6rem;
      padding-bottom: 6rem;
    }
  }
}

.highlight-slider-container {
  .slick-list {
    overflow: visible;
  }
}

.testimonials-slider {
  .slick-list {
    @apply px-[2px] py-[3px];

    .slick-track {
      @apply flex;

      .slick-slide {
        @apply flex h-auto px-1.5 md:px-4;
      }
    }
  }

  .slick-dots {
    @apply relative lg:mt-3;

    li button:before {
      color: #0c6460;
      font-size: 8px;
    }
  }
}

